create, read, update and delete clients
